istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: account-service
  namespace: fintrack

spec:
  host: account-service

  subsets:
  - name: v1
    labels:
      version: v1

  - name: v2
    labels:
      version: v2

  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 5
      interval: 1m
      baseEjectionTime: 5m
